--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:git-commit-autocomplete.suggestCommitMessage"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "git-commit-autocomplete.helloWorld",
-        "title": "Hello World"
+        "command": "git-commit-autocomplete.suggestCommitMessage",
+        "title": "Suggest Commit Message"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Git Commit Autocomplete",
+      "properties": {
+        "gitCommitAutocomplete.apiKey": {
+          "type": "string",
+          "default": "",
+          "description": "API Key for OpenAI's ChatGPT. To get an API key, sign up at https://platform.openai.com/api-keys and generate an API key in the API section."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
@@ -34,16 +47,21 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.89.0",
+    "@types/axios": "^0.14.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
-    "eslint": "^8.57.0",
-    "esbuild": "^0.20.2",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "axios": "^1.7.0",
+    "simple-git": "^3.24.0"
   }
 }
